--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Ranking PZBS</title>
+    <title>Oficjalny Ranking Brydżowy PZBS</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
     <link rel="stylesheet" href="res/ranking.css" />
   </head>
@@ -9,7 +9,7 @@
     <div class="container">
       <div class="page-header">
         <h1>
-          Ranking PZBS
+          Oficjalny Ranking Brydżowy PZBS
           <small></small>
         </h1>
       </div>
