--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -113,6 +113,9 @@
           </tr>
         </tbody>
       </table>
+      <div class="well well-sm">
+        &copy; 2017 - dla <a href="http://pzbs.pl">PZBS</a> zrobił <a href="https://emkael.info">mkl.</a> Też sobie <a href="https://github.com/emkael/pzbs-ranking">zrób.</a>
+      </div>
     </div>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script type="text/javascript" src="res/ranking.js"></script>
