--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -14,10 +14,10 @@
         </h1>
       </div>
       <div class="panel panel-default filters">
-        <div class="panel-heading">
+        <div class="panel-heading" role="button" data-toggle="collapse" data-target="#filters" aria-expanded="false" aria-controls="filters">
           Filtry rankingu
         </div>
-        <div class="panel-body">
+        <div class="collapse panel-body" id="filters">
           <p>
             <div class="btn-group" role="group">
               <button type="button" class="btn btn-disabled">Okręg</button>
@@ -118,6 +118,7 @@
       </div>
     </div>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script type="text/javascript" src="res/ranking.js"></script>
   </body>
 </html>
