--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -70,8 +70,10 @@
           </div>
         </div>
       </div>
+      <div id="top-paginator" class="text-center"></div>
+      <br />
       <div class="table-responsive">
-        <table class="table table-striped table-hover table-condened">
+        <table class="table table-striped table-hover table-condened table-paginate">
           <thead>
             <tr class="text-center">
               <th colspan="2">Miejsce</th>
@@ -125,6 +127,8 @@
             </tr>
           </tbody>
         </table>
+        <div id="bottom-paginator" class="text-center"></div>
+        <br />
       </div>
       <div class="well well-sm">
         &copy; 2017 - dla <a href="http://pzbs.pl">PZBS</a> zrobił <a href="https://emkael.info">mkl.</a> Też sobie <a href="https://github.com/emkael/pzbs-ranking">zrób.</a>
