Tooltips for precise ranking values

--- a/templates/player.html
+++ b/templates/player.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Oficjalny Ranking Brydżowy PZBS</title>
     <link rel="stylesheet" href="../res/bootstrap.min.css" />
+    <link rel="stylesheet" href="../res/jquery.qtip.min.css" />
     <link rel="stylesheet" href="../res/ranking.css" />
   </head>
   <body>
@@ -63,7 +64,9 @@
             </td>
             <td class="age-place text-right"></td>
             <td class="age-place-change"><span class="label"></span></td>
-            <td class="score text-right"></td>
+            <td class="score text-right">
+              <span class="score-tip"></span>
+            </td>
           </tr>
         </tbody>
       </table>
@@ -71,5 +74,7 @@
         &copy; 2017 - dla <a href="http://pzbs.pl">PZBS</a> zrobił <a href="https://emkael.info">mkl.</a> Też sobie <a href="https://github.com/emkael/pzbs-ranking">zrób.</a>
       </div>
     </div>
+    <script type="text/javascript" src="../res/jquery-2.2.4.min.js"></script>
+    <script type="text/javascript" src="../res/jquery.qtip.min.js"></script>
   </body>
 </html>
