--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Oficjalny Ranking Brydżowy PZBS</title>
     <link rel="stylesheet" href="res/bootstrap.min.css" />
+    <link rel="stylesheet" href="res/jquery.qtip.min.css" />
     <link rel="stylesheet" href="res/ranking.css" />
   </head>
   <body>
@@ -126,7 +127,9 @@
               <td class="age-place">
                 <span class="change label"></span>
               </td>
-              <td class="ranking text-right"></td>
+              <td class="ranking text-right">
+                <span class="score-tip"></span>
+              </td>
             </tr>
           </tbody>
         </table>
@@ -139,6 +142,7 @@
     </div>
     <script type="text/javascript" src="res/jquery-2.2.4.min.js"></script>
     <script type="text/javascript" src="res/bootstrap.min.js"></script>
+    <script type="text/javascript" src="res/jquery.qtip.min.js"></script>
     <script type="text/javascript" src="res/ranking.js"></script>
   </body>
 </html>
