--- a/templates/player.html
+++ b/templates/player.html
@@ -65,7 +65,7 @@
             <td class="age-place text-right"></td>
             <td class="age-place-change"><span class="label"></span></td>
             <td class="score text-right">
-              <span class="score-tip"></span>
+              <span class="auto-tooltip"></span>
             </td>
           </tr>
         </tbody>
