Bugfixes in both dataset and template

--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -141,7 +141,7 @@
               <th class="pid" colspan="2">PID</th>
               <th>
                 Zawodnik
-                <span class="glyphicons glyphicons-question-sign auto-tooltip"
+                <span class="glyphicon glyphicon-question-sign auto-tooltip"
                       title="Kliknięcie w wiersz wyświetla historię zawodnika"></span>
               </th>
               <th class="club">Klub</th>
