--- a/http/res/ranking.css
+++ b/http/res/ranking.css
@@ -1,9 +1,9 @@
 .table-hover > tbody > tr.gold > td { background-color: #FFEF96 }
 .table-hover > tbody > tr.silver > td { background-color: #E5E5E5 }
-.table-hover > tbody > tr.bronze > td { background-color: #CAA077 }
+.table-hover > tbody > tr.bronze > td { background-color: #E1CAB4 }
 .table-hover > tbody > tr.gold:hover > td { background-color: #FFE34C }
 .table-hover > tbody > tr.silver:hover > td { background-color: #CDCDCD }
-.table-hover > tbody > tr.bronze:hover > td { background-color: #B88048 }
+.table-hover > tbody > tr.bronze:hover > td { background-color: #D7B99A }
 .table {
     border-top: solid 1px #ddd; border-bottom: solid 1px #ddd;
     opacity: 0.1;
