Adding link to raw CSV in ranking page footer

--- a/templates/player.html
+++ b/templates/player.html
@@ -71,7 +71,8 @@
         </tbody>
       </table>
       <div class="well well-sm">
-        &copy; 2017 - dla <a href="http://pzbs.pl">PZBS</a> zrobił <a href="https://emkael.info">mkl.</a> Też sobie <a href="https://github.com/emkael/pzbs-ranking">zrób.</a>
+        &copy; 2017 - dla <a href="http://pzbs.pl">PZBS</a> zrobił <a href="https://emkael.info">mkl.</a>
+        Też sobie <a href="https://github.com/emkael/pzbs-ranking">zrób.</a>
       </div>
     </div>
     <script type="text/javascript" src="../res/jquery-2.2.4.min.js"></script>
