--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -198,7 +198,9 @@
         <br />
       </div>
       <div class="well well-sm">
-        &copy; 2017 - dla <a href="http://pzbs.pl">PZBS</a> zrobił <a href="https://emkael.info">mkl.</a> Też sobie <a href="https://github.com/emkael/pzbs-ranking">zrób.</a>
+        &copy; 2017 - dla <a href="http://pzbs.pl">PZBS</a> zrobił <a href="https://emkael.info">mkl.</a>
+        Też sobie <a href="https://github.com/emkael/pzbs-ranking">zrób.</a>
+        Dane w CSV <a href="https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings" id="rawlink">tu.</a>
       </div>
     </div>
     <script type="text/javascript" src="res/jquery-2.2.4.min.js"></script>
