--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -61,16 +61,18 @@
               <button type="button" class="btn btn-default" data-clear="age">wszyscy</button>
             </div>
             <div class="form-group">
-              <div class="input-group" role="group">
-                <div class="input-group-addon">Imię/nazwisko</div>
-                <input type="text" class="form-control" data-filter-field="name" />
-                <div class="input-group-btn">
-                  <button type="button" class="btn btn-default" data-filter-action="name">
-                    <i class="glyphicon glyphicon-search"></i>
-                  </button>
-                  <button type="button" class="btn btn-default" data-clear="name">wyczyść</button>
+              <form action="javascript:void(0)">
+                <div class="input-group" role="group">
+                  <div class="input-group-addon">Imię/nazwisko</div>
+                  <input type="text" class="form-control" data-filter-field="name" />
+                  <div class="input-group-btn">
+                    <button type="submit" class="btn btn-default" data-filter-action="name">
+                      <i class="glyphicon glyphicon-search"></i>
+                    </button>
+                    <button type="button" class="btn btn-default" data-clear="name">wyczyść</button>
+                  </div>
                 </div>
-              </div>
+              </form>
             </div>
           </div>
         </div>
