--- a/templates/player.html
+++ b/templates/player.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     <div class="container">
+      <div class="btn-group static-menu" role="nav">
+      </div>
       <div class="page-header">
         <h1>
           Oficjalny Ranking Brydżowy PZBS
