Ability to compile multiple panels into single static page

--- a/templates/static.html
+++ b/templates/static.html
@@ -19,11 +19,11 @@
           <small></small>
         </h2>
       </div>
-      <div class="panel panel-default">
-        <div class="panel-body" id="content">
+      <div class="panel panel-default" id="wrapper">
+        <div class="panel-body">
         </div>
       </div>
-      <div class="well well-sm">
+      <div class="well well-sm" id="footer">
         &copy; 2017 - dla <a href="http://pzbs.pl">PZBS</a> zrobił <a href="https://emkael.info">mkl.</a>
         Też sobie <a href="https://github.com/emkael/pzbs-ranking">zrób.</a>
       </div>
