Renaming HTTP resource directories to prefixed names

--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -3,9 +3,9 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Oficjalny Ranking Brydżowy PZBS</title>
-    <link rel="stylesheet" href="res/bootstrap.min.css" />
-    <link rel="stylesheet" href="res/jquery.qtip.min.css" />
-    <link rel="stylesheet" href="res/ranking.css" />
+    <link rel="stylesheet" href="_res/bootstrap.min.css" />
+    <link rel="stylesheet" href="_res/jquery.qtip.min.css" />
+    <link rel="stylesheet" href="_res/ranking.css" />
   </head>
   <body>
     <div class="container">
@@ -247,9 +247,9 @@
         Dane w CSV <a href="https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings" id="rawlink">tu.</a>
       </div>
     </div>
-    <script type="text/javascript" src="res/jquery-2.2.4.min.js"></script>
-    <script type="text/javascript" src="res/bootstrap.min.js"></script>
-    <script type="text/javascript" src="res/jquery.qtip.min.js"></script>
-    <script type="text/javascript" src="res/ranking.js"></script>
+    <script type="text/javascript" src="_res/jquery-2.2.4.min.js"></script>
+    <script type="text/javascript" src="_res/bootstrap.min.js"></script>
+    <script type="text/javascript" src="_res/jquery.qtip.min.js"></script>
+    <script type="text/javascript" src="_res/ranking.js"></script>
   </body>
 </html>
