--- a/templates/static.html
+++ b/templates/static.html
@@ -3,9 +3,9 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Oficjalny Ranking Brydżowy PZBS</title>
-    <link rel="stylesheet" href="res/bootstrap.min.css" />
-    <link rel="stylesheet" href="res/jquery.qtip.min.css" />
-    <link rel="stylesheet" href="res/ranking.css" />
+    <link rel="stylesheet" href="_res/bootstrap.min.css" />
+    <link rel="stylesheet" href="_res/jquery.qtip.min.css" />
+    <link rel="stylesheet" href="_res/ranking.css" />
   </head>
   <body>
     <div class="container">
