--- a/templates/player.html
+++ b/templates/player.html
@@ -3,9 +3,9 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Oficjalny Ranking Brydżowy PZBS</title>
-    <link rel="stylesheet" href="../res/bootstrap.min.css" />
-    <link rel="stylesheet" href="../res/jquery.qtip.min.css" />
-    <link rel="stylesheet" href="../res/ranking.css" />
+    <link rel="stylesheet" href="../_res/bootstrap.min.css" />
+    <link rel="stylesheet" href="../_res/jquery.qtip.min.css" />
+    <link rel="stylesheet" href="../_res/ranking.css" />
   </head>
   <body>
     <div class="container">
@@ -77,7 +77,7 @@
         Też sobie <a href="https://github.com/emkael/pzbs-ranking">zrób.</a>
       </div>
     </div>
-    <script type="text/javascript" src="../res/jquery-2.2.4.min.js"></script>
-    <script type="text/javascript" src="../res/jquery.qtip.min.js"></script>
+    <script type="text/javascript" src="../_res/jquery-2.2.4.min.js"></script>
+    <script type="text/javascript" src="../_res/jquery.qtip.min.js"></script>
   </body>
 </html>
