Filtering by club

--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -84,6 +84,21 @@
                 </div>
               </form>
             </div>
+            <div class="form-group">
+              <form action="javascript:void(0)">
+                <div class="input-group" role="group">
+                  <div class="input-group-addon">Klub</div>
+                  <input type="text" class="form-control" data-filter-field="club" />
+                  <div class="input-group-btn">
+                    <button type="submit" class="btn btn-default" data-filter-action="club"
+                            aria-label="Filtruj po klubie">
+                      <i class="glyphicon glyphicon-search"></i>
+                    </button>
+                    <button type="button" class="btn btn-default" data-clear="club">wyczyść</button>
+                  </div>
+                </div>
+              </form>
+            </div>
           </div>
         </div>
       </div>
